--- a/error.html
+++ b/error.html
@@ -65,7 +65,7 @@
                     </a>
                 </div>
                 <div class="section_navbar_container_menu_item">
-                    <a href="services" class="section_navbar_container_menu_item--link"  aria-label="menu name">
+                    <a href="ourServices.html" class="section_navbar_container_menu_item--link"  aria-label="menu name">
                         OUR SERVICES
                     </a>
                 </div>
@@ -113,7 +113,7 @@
                 </a>
             </div>
             <div class="section_navbar_container_mobileMenu_items_item">
-                <a href="services" class="section_navbar_container_mobileMenu_items_item--link" aria-label="menu name">
+                <a href="ourServices.html" class="section_navbar_container_mobileMenu_items_item--link" aria-label="menu name">
                     OUR SERVICES
                 </a>
             </div>
