--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </a>
                 </div>
                 <div class="section_navbar_container_menu_item">
-                    <a href="services" class="section_navbar_container_menu_item--link"  aria-label="OUR SERVICES">
+                    <a href="ourServices.html" class="section_navbar_container_menu_item--link"  aria-label="OUR SERVICES">
                         <h6 class=""  aria-label="OUR SERVICES">
                             OUR SERVICES
                         </h6>
@@ -117,7 +117,7 @@
                 </a>
             </div>
             <div class="section_navbar_container_mobileMenu_items_item">
-                <a href="services" class="section_navbar_container_mobileMenu_items_item--link" aria-label="menu name">
+                <a href="ourServices.html" class="section_navbar_container_mobileMenu_items_item--link" aria-label="menu name">
                     OUR SERVICES
                 </a>
             </div>
@@ -306,7 +306,7 @@
                 <div class="col-lg-6">
                     <div class="section_weFixIt_body_items">
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Interaktiv texnologiyalar">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Interaktiv texnologiyalar">
                                 <span class="section_weFixIt_body_items_item--text">Interaktiv texnologiyalar</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -329,17 +329,17 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover"  aria-label="Interaktiv Vitrinlər">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover"  aria-label="Interaktiv Vitrinlər">
                                 <span class="section_weFixIt_body_items_item--text">Interaktiv Vitrinlər</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover"  aria-label="Virtual promouter">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover"  aria-label="Virtual promouter">
                                 <span class="section_weFixIt_body_items_item--text">Virtual promouter</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="proyeksiya ekranlari">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="proyeksiya ekranlari">
                                 <span class="section_weFixIt_body_items_item--text">proyeksiya ekranlari</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -362,7 +362,7 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="avtomatlaşdirilmiş idarəetmə sistemi">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="avtomatlaşdirilmiş idarəetmə sistemi">
                                 <span class="section_weFixIt_body_items_item--text">avtomatlaşdirilmiş idarəetmə sistemi</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -385,22 +385,22 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Web">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Web">
                                 <span class="section_weFixIt_body_items_item--text">Web</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="tətbiqi soft">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="tətbiqi soft">
                                 <span class="section_weFixIt_body_items_item--text">tətbiqi soft</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="mikronontrollərin proqramlaşdırılması">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="mikronontrollərin proqramlaşdırılması">
                                 <span class="section_weFixIt_body_items_item--text">mikronontrollərin proqramlaşdırılması</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover"aria-label="App">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover"aria-label="App">
                                 <span class="section_weFixIt_body_items_item--text">App</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -423,12 +423,12 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="crm">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="crm">
                                 <span class="section_weFixIt_body_items_item--text">crm</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="kabel çəkmə">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="kabel çəkmə">
                                 <span class="section_weFixIt_body_items_item--text">kabel çəkmə</span>
                             </a>
                         </div>
@@ -437,12 +437,12 @@
                 <div class="col-lg-6">
                     <div class="section_weFixIt_body_items">
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="bulud hesablaması">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="bulud hesablaması">
                                 <span class="section_weFixIt_body_items_item--text">bulud hesablaması</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="müşahidə sistemləri">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="müşahidə sistemləri">
                                 <span class="section_weFixIt_body_items_item--text">müşahidə sistemləri</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -465,12 +465,12 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Gps unıt sistemləri">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Gps unıt sistemləri">
                                 <span class="section_weFixIt_body_items_item--text">Gps unıt sistemləri</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Mini ats və voip teledoniya sistemləri">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Mini ats və voip teledoniya sistemləri">
                                 <span class="section_weFixIt_body_items_item--text">Mini ats və voip teledoniya sistemləri</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -493,17 +493,17 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="hosting  və serverlərin qurulması">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="hosting  və serverlərin qurulması">
                                 <span class="section_weFixIt_body_items_item--text">hosting  və serverlərin qurulması</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="domen kontrolleri">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="domen kontrolleri">
                                 <span class="section_weFixIt_body_items_item--text">domen kontrolleri</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="E-mail server">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="E-mail server">
                                 <span class="section_weFixIt_body_items_item--text">E-mail server</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -526,12 +526,12 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Sənəd dövriyyəsi">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Sənəd dövriyyəsi">
                                 <span class="section_weFixIt_body_items_item--text">Sənəd dövriyyəsi</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Ip - telefoniya">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Ip - telefoniya">
                                 <span class="section_weFixIt_body_items_item--text">Ip - telefoniya</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -554,7 +554,7 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Cağri mərkəzi">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Cağri mərkəzi">
                                 <span class="section_weFixIt_body_items_item--text">Cağri mərkəzi</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
