--- a/ourServicesInner.html
+++ b/ourServicesInner.html
@@ -66,7 +66,7 @@
                     </a>
                 </div>
                 <div class="section_navbar_container_menu_item active">
-                    <a href="services" class="section_navbar_container_menu_item--link"  aria-label="menu name">
+                    <a href="ourServices.html" class="section_navbar_container_menu_item--link"  aria-label="menu name">
                         OUR SERVICES
                     </a>
                 </div>
@@ -114,7 +114,7 @@
                 </a>
             </div>
             <div class="section_navbar_container_mobileMenu_items_item active">
-                <a href="services" class="section_navbar_container_mobileMenu_items_item--link" aria-label="menu name">
+                <a href="ourServices.html" class="section_navbar_container_mobileMenu_items_item--link" aria-label="menu name">
                     OUR SERVICES
                 </a>
             </div>
