--- a/ourServices.html
+++ b/ourServices.html
@@ -201,107 +201,107 @@
                             <div class="section_ourServicesPage_body_items">
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">Interaktiv texnologiyalar</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="Interaktiv texnologiyalar">Interaktiv texnologiyalar</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">Interaktiv Vitrinlər</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="Interaktiv Vitrinlər">Interaktiv Vitrinlər</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">Virtual promouter</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="Virtual promouter">Virtual promouter</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">proyeksiya ekranlari</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="proyeksiya ekranlari">proyeksiya ekranlari</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">avtomatlaşdirilmiş idarəetmə sistemi</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="avtomatlaşdirilmiş idarəetmə sistemi">avtomatlaşdirilmiş idarəetmə sistemi</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">Web</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="Web">Web</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">tətbiqi soft</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="tətbiqi soft">tətbiqi soft</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">mikronontrollərin proqramlaşdırılması</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="mikronontrollərin proqramlaşdırılması">mikronontrollərin proqramlaşdırılması</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">App</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="App">App</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">crm</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="crm">crm</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">kabel çəkmə</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="kabel çəkmə">kabel çəkmə</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">bulud hesablaması</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="bulud hesablaması">bulud hesablaması</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">müşahidə sistemləri</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="müşahidə sistemləri">müşahidə sistemləri</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">Gps unıt sistemləri</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="Gps unıt sistemləri">Gps unıt sistemləri</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">Mini ats və voip teledoniya sistemləri</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="Mini ats və voip teledoniya sistemləri">Mini ats və voip teledoniya sistemləri</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">hosting  və serverlərin qurulması</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="hosting  və serverlərin qurulması">hosting  və serverlərin qurulması</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">domen kontrolleri</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="domen kontrolleri">domen kontrolleri</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">E-mail server</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="E-mail server">E-mail server</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">Sənəd dövriyyəsi</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="Sənəd dövriyyəsi">Sənəd dövriyyəsi</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">Ip - telefoniya</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="Ip - telefoniya">Ip - telefoniya</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
                                     <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
-                                        <span class="section_ourServicesPage_body_items_item--text">Cağri mərkəzi</span>
+                                        <span class="section_ourServicesPage_body_items_item--text glitch glitchOnHover" aria-label="Cağri mərkəzi">Cağri mərkəzi</span>
                                     </a>
                                 </div>
                             </div>
