--- a/ourServices.html
+++ b/ourServices.html
@@ -55,18 +55,22 @@
     </div>
     <div class="container-fluid">
         <div class="section_navbar_container">
-            <a href="/" class="section_navbar_container_link" aria-label="dtech logo">
-                <i class="dtech-icons dtech-logo"></i>
+            <a href="/" class="section_navbar_container_link glitch glitchOutHover glitchIcon glitch-logo animationDelay-4">
+                <i class="dtech-icons dtech-logo" ></i>
             </a>
             <div class="section_navbar_container_menu">
-                <div class="section_navbar_container_menu_item">
-                    <a href="/" class="section_navbar_container_menu_item--link"  aria-label="menu name">
-                        ABOUT COMPANY
+                <div class="section_navbar_container_menu_item active">
+                    <a href="/" class="section_navbar_container_menu_item--link"  aria-label="ABOUT COMPANY">
+                        <h6 class="glitch glitchOutHover"  aria-label="ABOUT COMPANY">
+                            ABOUT COMPANY
+                        </h6>
                     </a>
                 </div>
-                <div class="section_navbar_container_menu_item active">
-                    <a href="services" class="section_navbar_container_menu_item--link"  aria-label="menu name">
-                        OUR SERVICES
+                <div class="section_navbar_container_menu_item">
+                    <a href="services" class="section_navbar_container_menu_item--link"  aria-label="OUR SERVICES">
+                        <h6 class="glitch glitchOutHover"  aria-label="OUR SERVICES">
+                            OUR SERVICES
+                        </h6>
                     </a>
                 </div>
             </div>
@@ -107,12 +111,12 @@
             </div>
         </div>
         <div class="section_navbar_container_mobileMenu_items">
-            <div class="section_navbar_container_mobileMenu_items_item">
+            <div class="section_navbar_container_mobileMenu_items_item active">
                 <a href="/" class="section_navbar_container_mobileMenu_items_item--link" aria-label="menu name">
                     ABOUT COMPANY
                 </a>
             </div>
-            <div class="section_navbar_container_mobileMenu_items_item active">
+            <div class="section_navbar_container_mobileMenu_items_item">
                 <a href="services" class="section_navbar_container_mobileMenu_items_item--link" aria-label="menu name">
                     OUR SERVICES
                 </a>
@@ -145,27 +149,26 @@
     </div>
 </div>
 
-
 <section class="sidebar">
     <div class="sidebar_lang">
-        <a href="#" class="sidebar_lang_item">
+        <a href="#" class="sidebar_lang_item glitch glitchOutHover"  aria-label="RU">
             RU
         </a>
-        <a href="#" class="sidebar_lang_item active">
+        <a href="#" class="sidebar_lang_item active glitch glitchOutHover"  aria-label="En">
             EN
         </a>
     </div>
     <div class="sidebar_social">
-        <a href="#" class="sidebar_social_item">
+        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-instagram" aria-label="social menu name">
             <i class="dtech-icons dtech-instagram"></i>
         </a>
-        <a href="#" class="sidebar_social_item">
+        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-fb" aria-label="social menu name">
             <i class="dtech-icons dtech-fb"></i>
         </a>
-        <a href="#" class="sidebar_social_item">
+        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-linkedin" aria-label="social menu name">
             <i class="dtech-icons dtech-linkedin"></i>
         </a>
-        <a href="#" class="sidebar_social_item">
+        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-twitter" aria-label="social menu name">
             <i class="dtech-icons dtech-twitter"></i>
         </a>
     </div>
@@ -178,18 +181,22 @@
             <div class="col-lg-6 pb-5">
                 <div class="section_head">
                     <h1 class="section_head--header">
-                        Our services
+                        <span class="glitch glitchOutHover animationDelay-2" aria-label="Our services">
+                            Our services
+                        </span>
                     </h1>
                 </div>
                 <div class="section_ourServicesPage_head">
                     <h1 class="section_ourServicesPage_head--header">
-                        DESIGN & <br/>
-                        DEVELOPMENT
+                        <span class="glitch glitchOutHover animationDelay-2" aria-label="DESIGN & DEVELOPMENT">
+                            DESIGN & <br/>
+                            DEVELOPMENT
+                        </span>
                     </h1>
-                    <p class="section_ourServicesPage_head--description">
+                    <p class="section_ourServicesPage_head--description glitch glitchOutHover animationDelay-2" aria-label="Standing still is not an option. We develop with the future of your brand in mind. Where do you want to go, which channels are you going to use to get there, and where will the conversion take place? Stimmt helps you answer those questions.">
                         Standing still is not an option. We develop with the future of your brand in mind. Where do you want to go, which channels are you going to use to get there, and where will the conversion take place? Stimmt helps you answer those questions.
                     </p>
-                    <p class="section_ourServicesPage_head--description">
+                    <p class="section_ourServicesPage_head--description glitch glitchOutHover animationDelay-2" aria-label="The success of your digital product stands or falls with clear interaction, the right functionality and a concise, unambiguous message. But how do you combine that with brand recognition and experience? How do you create the right brand perception online? That’s where we come in. The right technique in a kick-ass design – that is our speciality.">
                         The success of your digital product stands or falls with clear interaction, the right functionality and a concise, unambiguous message. But how do you combine that with brand recognition and experience? How do you create the right brand perception online? That’s where we come in. The right technique in a kick-ass design – that is our speciality.
                     </p>
                 </div>
